# MocoTrackQt

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LineEditDouble.cpp  LineEditPath.cpp  LineEditPath.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  TextEditDialog.cpp  TextEditDialog.h  TextEditDialog.ui  Tracker.cpp  Tracker.h  clean.sh  main.cpp  resources.qrc  windows_resources.rc
command_line/: ArgParse.cpp  ArgParse.h  CMakeLists.txt  CMakeSettings.json  Tracker.cpp  Tracker.h  XMLWriter.cpp  XMLWriter.h  main.cpp
images/: running_icon.ai  running_icon_cutout.ai  win_icon.sh
inno_setup/: installer_script_v1.iss
threaded_version/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Tracker.cpp  Tracker.h  main.cpp  resources.qrc
